# TheWebsite

./: main.py  pyproject.toml
static/: Emulator.js  Game.css  Game.js  Home.js  btn.css  btn.js  btn2.css  emulator.css  style.css  text.css
templates/: About.html  Emulator.html  Game.html  GameRoom.html  Home.html  abortmissionselfdestruct.html  contact.html
