[tool.poetry]
name = "Site"
version = "0.1.0"
description = ""
authors = ["MamaJoe, Trigger"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
waitress = "^2.1.1"
replit = "^3.2.4"
prometheus-flask-exporter = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
